--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,11 @@
         "rootDir": "src",
         "strict": true,
         "noImplicitReturns": true,
-    }
+    },
+    "exclude": [
+        ".vscode-test",
+        "dist",
+        "lib",
+        "node_modules",
+    ]
 }
