--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "csharp-code-creator",
     "publisher": "spencerjames",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Generate C# interfaces from classes and classes from interfaces.",
     "displayName": "C# Code Creator",
     "shortName": "C# Code Creator",
@@ -43,9 +43,15 @@
             "properties": {
                 "csharp-code-generator.interfaceImplementations": {
                     "type": "object",
-                    "markdownDescription": "On class generation from an interface, if the interface implements an interfaces defined here, its defined implementation is generated in the new class.\n\nPlaceholders: `%className%`, `%classTypeName%`, `%interfaceName%`, `%indent%`",
+                    "markdownDescription": "On class generation from an interface, if the interface implements an interfaces defined here, its defined implementation is generated in the new class.\n\nPlaceholders: `%className%`, `%classTypeName%`, `%genericType%`, `%indent%`, `%interfaceName%`",
                     "default": {
-                        "IDisposable": "#region IDisposable\nprivate bool _disposed;\n\n~%className%() => Dispose(false);\n\npublic void Dispose()\n{\n%indent%Dispose(true);\n%indent%GC.SuppressFinalize(this);\n}\n\nprotected virtual void Dispose(bool disposing)\n{\n%indent%if (_disposed) return;\n\n%indent%if (disposing)\n%indent%{\n%indent%%indent%// TODO: dispose managed managed objects\n%indent%}\n\n%indent%// TODO: dispose unmanaged objects\n\n%indent%_disposed = true;\n}\n#endregion"
+                        "ICloneable": "public object Clone() => throw new NotImplementedException();",
+                        "ICollection": "#region ICollection\npublic int Count => throw new NotImplementedException();\npublic bool IsSynchronized => throw new NotImplementedException();\npublic object SyncRoot => throw new NotImplementedException();\npublic void CopyTo(Array array, int index) => throw new NotImplementedException();\npublic IEnumerator GetEnumerator() => throw new NotImplementedException();\n#endregion",
+                        "IComparable": "public int CompareTo(object? obj) => throw new NotImplementedException();",
+                        "IDisposable": "#region IDisposable\nprivate bool _disposed;\n\n~%className%() => Dispose(false);\n\npublic void Dispose()\n{\n%indent%Dispose(true);\n%indent%GC.SuppressFinalize(this);\n}\n\nprotected virtual void Dispose(bool disposing)\n{\n%indent%if (_disposed) return;\n\n%indent%if (disposing)\n%indent%{\n%indent%%indent%// TODO: dispose managed managed objects\n%indent%}\n\n%indent%// TODO: dispose unmanaged objects\n\n%indent%_disposed = true;\n}\n#endregion",
+                        "IEnumerable": "public IEnumerator GetEnumerator() => throw new NotImplementedException();",
+                        "IEnumerable<(.+)>": "public IEnumerator<%genericType%> GetEnumerator() => throw new NotImplementedException();\n\nIEnumerator IEnumerable.GetEnumerator() => GetEnumerator();",
+                        "IFormattable": "public string ToString(string? format, IFormatProvider? formatProvider) => throw new NotImplementedException();"
                     }
                 },
                 "csharp-code-generator.formatDocumentOnCodeGeneration": {
