support to clone lib repo

--- a/package.json
+++ b/package.json
@@ -74,13 +74,14 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run rebuild && npm prune --omit=dev",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
+        "compile": "npm run libclone && tsc -p ./",
+        "watch": "npm run libclone && tsc -watch -p ./",
         "pretest": "npm run compile && npm run lint",
         "lint": "eslint src",
         "test": "vscode-test",
         "clean": "./clean.sh -y",
-        "libgit": "./libgit.sh -ciy",
+        "libclean": "./libgit.sh -ciy",
+        "libclone": "./libgit.sh -gy",
         "rebuild": "./clean.sh -iy && npm run compile"
     },
     "devDependencies": {
