--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,15 @@
 **/*.map
 **/*.ts
+**/*.vsix
+*.sh
 .gitignore
 .vscode-test.mjs
 .vscode-test/
 .vscode/
+.vscodeignore
 dist/test/
-lib/
 eslint.config.mjs
-src/**
+lib/
+releases/
+src/
 tsconfig.json
-*.sh
